tests/ui/traits/ice-with-dyn-pointee-errors.stderr
error[E0038]: the trait `Pointee` is not dyn compatible
  --> $DIR/ice-with-dyn-pointee-errors.rs:8:23
   |
LL | fn raw_pointer_in(x: &dyn Pointee<Metadata = ()>) {
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^ `Pointee` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $SRC_DIR/core/src/ptr/metadata.rs:LL:COL
   |
   = note: the trait is not dyn compatible because it opted out of dyn-compatibility

error[E0038]: the trait `Pointee` is not dyn compatible
  --> $DIR/ice-with-dyn-pointee-errors.rs:10:5
   |
LL |     unknown_sized_object_ptr_in(x)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Pointee` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $SRC_DIR/core/src/ptr/metadata.rs:LL:COL
   |
   = note: the trait is not dyn compatible because it opted out of dyn-compatibility

error[E0038]: the trait `Pointee` is not dyn compatible
  --> $DIR/ice-with-dyn-pointee-errors.rs:15:20
   |
LL |     raw_pointer_in(&42)
   |                    ^^^ `Pointee` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $SRC_DIR/core/src/ptr/metadata.rs:LL:COL
   |
   = note: the trait is not dyn compatible because it opted out of dyn-compatibility

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0038`.
